# asp-project

backend/: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  tasks.py
backend/app/auth/: jwt_token_tools.py
backend/app/dao/: dao.py  exceptions.py
backend/app/models/: create_module_request.py  create_plan_request.py  enrollment.py  lesson.py  module.py  plan.py  response.py  user.py
backend/app/routers/: auth.py  content.py  enrollment.py
backend/db/: database.db  db_schema.sql
frontend/: .prettierrc.json  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/app/: store.js
frontend/src/app/api/: apiSlice.js
frontend/src/components/Footer/: Footer.jsx
frontend/src/components/LearningItem/: LearningItem.jsx  LearningPlan.jsx  Module.jsx
frontend/src/components/Navbar/: Navbar.jsx
frontend/src/features/learningPlan/: learningPlanApiSlice.js  learningPlanSlice.js
frontend/src/features/module/: moduleApiSlice.js  moduleSlice.js
frontend/src/features/user/: userApiSlice.js  userSlice.js
frontend/src/pages/: index.js
frontend/src/pages/Auth/: AuthOutlet.jsx  Login.jsx  Register.jsx
frontend/src/pages/Dashboard/: CreateModule.jsx  CreatePlan.jsx  Dashboard.jsx
frontend/src/pages/Home/: Home.jsx  Home.styles.js
frontend/src/pages/LearningPlanFull/: LearningPlanFull.jsx
frontend/src/pages/ModuleFull/: ModuleFull.jsx
frontend/src/providers/: AuthProvider.jsx
frontend/src/routes/: Routing.jsx
frontend/src/themes/: AppThemeProvider.jsx
(+3 files in other folders)
