[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Gerry Barron <gb122@student.london.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8.13"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
PyJWT = "^2.8.0"

[tool.poetry.dev-dependencies]
invoke = "^2.2.0"
black = "^23.7.0"
mypy = "^1.5.1"
isort = "^5.12.0"
pytest = "^7.4.0"
pre-commit = "^3.3.3"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
      build
    | dist
    | \.venv
    | \.pytest_cache
    | \.vscode
    | \.mypy_cache
)/
'''
skip-string-normalization = true

[tool.isort]
profile = "black"
skip = [".gitignore"]
extend_skip = [".md", ".json"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
